feat(architecture): integrate ms-kitchen, outbox pattern, and pricing immutability snapshots (#2)